- création des dossiers modeles, fenetres et services

--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -66,63 +66,63 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GradientPageConnexion.cs">
+    <Compile Include="Services\GradientPageConnexion.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MyDraggableForm.cs">
+    <Compile Include="Services\MyDraggableForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="pageConnexion.cs">
+    <Compile Include="Fenetre\pageConnexion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="pageConnexion.Designer.cs">
+    <Compile Include="Fenetre\pageConnexion.Designer.cs">
       <DependentUpon>pageConnexion.cs</DependentUpon>
     </Compile>
-    <Compile Include="main.cs">
+    <Compile Include="Fenetre\main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="main.Designer.cs">
+    <Compile Include="Fenetre\main.Designer.cs">
       <DependentUpon>main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Home.cs">
+    <Compile Include="Fenetre\Home.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Home.Designer.cs">
+    <Compile Include="Fenetre\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
-    <Compile Include="Collaborators.cs">
+    <Compile Include="Fenetre\Collaborators.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Collaborators.Designer.cs">
+    <Compile Include="Fenetre\Collaborators.Designer.cs">
       <DependentUpon>Collaborators.cs</DependentUpon>
     </Compile>
-    <Compile Include="Projects.cs">
+    <Compile Include="Fenetre\Projects.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Projects.Designer.cs">
+    <Compile Include="Fenetre\Projects.Designer.cs">
       <DependentUpon>Projects.cs</DependentUpon>
     </Compile>
-    <Compile Include="Organization.cs">
+    <Compile Include="Fenetre\Organization.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Organization.Designer.cs">
+    <Compile Include="Fenetre\Organization.Designer.cs">
       <DependentUpon>Organization.cs</DependentUpon>
     </Compile>
-    <Compile Include="Quitter.cs">
+    <Compile Include="Fenetre\Quitter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Quitter.Designer.cs">
+    <Compile Include="Fenetre\Quitter.Designer.cs">
       <DependentUpon>Quitter.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Organization.resx">
+    <EmbeddedResource Include="Fenetre\Organization.resx">
       <DependentUpon>Organization.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="pageConnexion.resx">
+    <EmbeddedResource Include="Fenetre\pageConnexion.resx">
       <DependentUpon>pageConnexion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="main.resx">
+    <EmbeddedResource Include="Fenetre\main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -134,16 +134,16 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Home.resx">
+    <EmbeddedResource Include="Fenetre\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Collaborators.resx">
+    <EmbeddedResource Include="Fenetre\Collaborators.resx">
       <DependentUpon>Collaborators.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Projects.resx">
+    <EmbeddedResource Include="Fenetre\Projects.resx">
       <DependentUpon>Projects.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Quitter.resx">
+    <EmbeddedResource Include="Fenetre\Quitter.resx">
       <DependentUpon>Quitter.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -159,6 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Modeles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
