création du service session

--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Fenetre\Quitter.Designer.cs">
       <DependentUpon>Quitter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\Session.cs" />
     <EmbeddedResource Include="Fenetre\Organization.resx">
       <DependentUpon>Organization.cs</DependentUpon>
     </EmbeddedResource>
