Fix bug Modeles/Users

--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -66,7 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modeles\Users.cs" />
+    <Compile Include="Modeles\Model.cs" />
+    <Compile Include="Modeles\Task.cs" />
+    <Compile Include="Modeles\User.cs" />
     <Compile Include="Services\GradientPageConnexion.cs">
       <SubType>Component</SubType>
     </Compile>
