--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\TaskComment.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\User.cs" />
