Rectification panel Organisation + Calcul

--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\Calcul.cs" />
     <Compile Include="Windows\PanelOrganization.cs">
       <SubType>UserControl</SubType>
     </Compile>
