--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Collaborator.cs" />
     <Compile Include="Services\Calcul.cs" />
+    <Compile Include="Services\CustomTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Services\CustomTextBox.Designer.cs">
+      <DependentUpon>CustomTextBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Organizations\OrganizationListProjects.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,11 +96,11 @@
     <Compile Include="Windows\Organizations\OrganizationListTeams.Designer.cs">
       <DependentUpon>OrganizationListTeams.cs</DependentUpon>
     </Compile>
-    <Compile Include="Windows\Organizations\PanelOrganization.cs">
+    <Compile Include="Windows\Organizations\OrganizationMain.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Windows\Organizations\PanelOrganization.Designer.cs">
-      <DependentUpon>PanelOrganization.cs</DependentUpon>
+    <Compile Include="Windows\Organizations\OrganizationMain.Designer.cs">
+      <DependentUpon>OrganizationMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\BelongsTo.cs" />
     <Compile Include="Models\Column.cs" />
@@ -138,11 +144,11 @@
     <Compile Include="Windows\Projects\ProjectListTeams.Designer.cs">
       <DependentUpon>ProjectListTeams.cs</DependentUpon>
     </Compile>
-    <Compile Include="Windows\Projects\PanelProject.cs">
+    <Compile Include="Windows\Projects\ProjectMain.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Windows\Projects\PanelProject.Designer.cs">
-      <DependentUpon>PanelProject.cs</DependentUpon>
+    <Compile Include="Windows\Projects\ProjectMain.Designer.cs">
+      <DependentUpon>ProjectMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Windows\Quitter.cs">
       <SubType>Form</SubType>
@@ -151,6 +157,24 @@
       <DependentUpon>Quitter.cs</DependentUpon>
     </Compile>
     <Compile Include="Services\Session.cs" />
+    <Compile Include="Windows\Teams\TeamMain.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamMain.Designer.cs">
+      <DependentUpon>TeamMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamListUsers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamListUsers.Designer.cs">
+      <DependentUpon>TeamListUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.Designer.cs">
+      <DependentUpon>TeamTaskGraphic.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Windows\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,8 +190,8 @@
     <EmbeddedResource Include="Windows\Organizations\OrganizationListTeams.resx">
       <DependentUpon>OrganizationListTeams.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Organizations\PanelOrganization.resx">
-      <DependentUpon>PanelOrganization.cs</DependentUpon>
+    <EmbeddedResource Include="Windows\Organizations\OrganizationMain.resx">
+      <DependentUpon>OrganizationMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -184,11 +208,20 @@
     <EmbeddedResource Include="Windows\Projects\ProjectListTeams.resx">
       <DependentUpon>ProjectListTeams.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Projects\PanelProject.resx">
-      <DependentUpon>PanelProject.cs</DependentUpon>
+    <EmbeddedResource Include="Windows\Projects\ProjectMain.resx">
+      <DependentUpon>ProjectMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Quitter.resx">
       <DependentUpon>Quitter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Teams\TeamMain.resx">
+      <DependentUpon>TeamMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Teams\TeamListUsers.resx">
+      <DependentUpon>TeamListUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.resx">
+      <DependentUpon>TeamTaskGraphic.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\StoriesHelper.exe.config" />
     <None Include="packages.config" />
