--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -36,6 +36,9 @@
     <Reference Include="BCrypt.Net-Next, Version=4.0.2.0, Culture=neutral, PublicKeyToken=1e11be04b6288443, processorArchitecture=MSIL">
       <HintPath>..\packages\BCrypt.Net-Next.4.0.2\lib\net472\BCrypt.Net-Next.dll</HintPath>
     </Reference>
+    <Reference Include="FluentDateTime, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6ccbc613702e6c71, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentDateTime.2.0.0\lib\netstandard2.0\FluentDateTime.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=8.0.27.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\OneDrive\Bureau\MySql.Data.dll</HintPath>
@@ -169,11 +172,17 @@
     <Compile Include="Windows\Teams\TeamListUsers.Designer.cs">
       <DependentUpon>TeamListUsers.cs</DependentUpon>
     </Compile>
-    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.cs">
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphics.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.Designer.cs">
-      <DependentUpon>TeamTaskGraphic.cs</DependentUpon>
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskGraphics.Designer.cs">
+      <DependentUpon>TeamTaskGraphics.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskStatistiques.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskStatistiques.Designer.cs">
+      <DependentUpon>TeamTaskStatistiques.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Windows\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -220,8 +229,11 @@
     <EmbeddedResource Include="Windows\Teams\TeamListUsers.resx">
       <DependentUpon>TeamListUsers.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TeamTaskGraphic.resx">
-      <DependentUpon>TeamTaskGraphic.cs</DependentUpon>
+    <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TeamTaskGraphics.resx">
+      <DependentUpon>TeamTaskGraphics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TeamTaskStatistiques.resx">
+      <DependentUpon>TeamTaskStatistiques.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\StoriesHelper.exe.config" />
     <None Include="packages.config" />
