--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Windows\Teams\TeamStatistiques\TeamTaskStatistiques.Designer.cs">
       <DependentUpon>TeamTaskStatistiques.cs</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TitreStatistique.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Teams\TeamStatistiques\TitreStatistique.Designer.cs">
+      <DependentUpon>TitreStatistique.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Windows\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -234,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TeamTaskStatistiques.resx">
       <DependentUpon>TeamTaskStatistiques.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TitreStatistique.resx">
+      <DependentUpon>TitreStatistique.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\StoriesHelper.exe.config" />
     <None Include="packages.config" />
